2005-12-01  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/procactions.c: (renice_single_process),
	(kill_single_process):
	* src/procdialogs.c: (procman_action_to_command),
	(procdialog_create_root_password_dialog):
	* src/procdialogs.h:
	* src/procman_gksu.c: (procman_gksu_create_root_password_dialog):
	* src/procman_gksu.h:
	* src/procman_gnomesu.c: (procman_gnomesu_get_exec),
	(procman_gnomesu_create_root_password_dialog):
	* src/procman_gnomesu.h:

	Post release version bump to 2.13.3.

	Added Gksu support.
	Original patch by Sébastion Bacher <seb128@debian.org>
	from Ubuntu packaged.

	Splitted Gksu and Gnomesu implementations.

	TODO: fix password prompt.

2005-12-01  Benoît Dejean  <benoit@placenet.org>

	* src/procactions.c: (renice):
	* src/procactions.h:
	* src/procdialogs.c: (renice_dialog_button_pressed):

	Droped unused pid argument for renice().

2005-11-30  Benoît Dejean  <benoit@placenet.org>

	* src/README.hacking:

	Dropped old file.

2005-11-29  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am: Removed non-existant file.

2005-11-22  Matthias Clasen  <mclasen@redhat.com>

	* gnome-system-monitor.desktop.in.in: Add Monitor
	and X-Red-Hat-Base to Categories.  (#322130)

2005-11-13  Benoît Dejean  <benoit@placenet.org>

	* NEWS: Released 2.13.2.

2005-11-08  Benoît Dejean  <benoit@placenet.org>

	* src/gnome-system-monitor.schemas.in:
	* src/smooth_refresh.c: (status_changed), (smooth_refresh_new),
	(smooth_refresh_destroy), (smooth_refresh_get):

	Added /apps/procman/smooth_refresh to control behaviour.

2005-11-08  Benoît Dejean  <benoit@placenet.org>

	* src/disks.c: (fsusage_stats), (add_disk), (create_disk_view):

	Added "available" column. Closes #320603.

2005-11-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	2.13.2.
	
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(get_process_memory_writable), (get_process_memory_info),
	(update_info_mutable_cols):