@@ -1,3 +1,12 @@
+2005-12-06  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/procman.c: (procman_data_new):
+	* src/procman.h:
+	* src/proctable.c: (proctable_free_info), (procinfo_new):
+
+	Let's have fun with g_slice_*.
+
 2005-12-01  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
